fix: allow custom CSS height on scrollbar
This allows the scrollbar height of the settings view to be resized
correctly instead of extending to the bottom of the app (regression from
the e3e13a5 commit).

--- a/css/components/scrollbar.css
+++ b/css/components/scrollbar.css
@@ -1,17 +1,17 @@
 .scrollbar {
     display: none;
     position: absolute;
-    top: 0;       /* Overridden in JS. */
-    right: 0;     /* Overridden in JS. */
+    top: 0;    /* Overridden in JS. */
+    right: 0;  /* Overridden in JS. */
     margin-right: 5px;
     width: 4px;
-    height: 100%; /* Overridden in JS. */
+    height: 0; /* Overridden in JS. */
     overflow: hidden;
     z-index: 1;
 
     .scrollbar-thumb {
         width: 100%;
-        height: 50px; /* Overridden in JS. */
+        height: 0; /* Overridden in JS. */
         min-height: 12px;
         max-height: 100%;
         background-color: rgb(from var(--grey-pale) r g b / .5);
