--- a/css/views/settings.css
+++ b/css/views/settings.css
@@ -185,6 +185,7 @@
     & ~ .scrollbar {
         right: 0 !important;
         margin-right: 3px;
+        height: var(--view-height);
 
         .scrollbar-thumb {
             background: light-dark(var(--grey-pale), #0C0C0C);
